--- a/definitions/raw-networking.yaml
+++ b/definitions/raw-networking.yaml
@@ -3,7 +3,7 @@ image:
   arch: x86_64
   imageType: raw
   baseImage: SLE-Micro.x86_64-5.5.0-Default-GM.raw
-  outputImageName: eib-networking.raw
+  outputImageName: ./out/eib-networking.raw
 operatingSystem:
   users:
     - username: root
