--- a/definitions/raw-rke2-single.yaml
+++ b/definitions/raw-rke2-single.yaml
@@ -2,8 +2,8 @@ apiVersion: 1.0
 image:
   arch: x86_64
   imageType: raw
-  baseImage: SLE-Micro.x86_64-5.5.0-Default-GM.raw
-  outputImageName: ./out/eib-image.raw
+  baseImage: SLE-Micro.x86_64-5.5.0-Large-GM.raw
+  outputImageName: ./out/eib-rke2-image.raw
 kubernetes:
   version: v1.28.5+rke2r1
 operatingSystem:
